# gstackqlite_hypervisor

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
scripts/: install.ps1  install.sh  package-release.sh
src/: bootstrap.rs  config.rs  db.rs  git.rs  ideas.rs  ingest.rs  lib.rs  lofi.rs  main.rs  manifest.rs  mcp.rs  models.rs  scan.rs  tui.rs  upgrade.rs  util.rs
tests/: integration.rs
